--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -874,7 +874,7 @@ for i in range(len(matrizea)):
 
 3.11 Ariketa
 
-Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen programa bat. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak lekuz aldatzen aldatzen ditu, indizeetan "random," metodoa erabiliz. Gero emaitza erakusten du.
+Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen programa bat. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak lekuz aldatzen aldatzen ditu, indizeetan `random` metodoa erabiliz. Gero emaitza erakusten du.
 
 ```python
 import random
