--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -1,18 +1,17 @@
 # Funtzioak
 
-Funtzioak programa txikiak dira programen barruan. Funtzio horrek pantailan agur bat besterik ez du ateratzen:
+Funtzioak programen barruan dauden programa txikiak dira. Adibidez, funtzio horrek pantailan agur bat besterik ez du ateratzen:
 
 ```python
 def agurra ():
   print "Kaixo"
 ```
 
-Ikus daitekeenez, funtzio bat definitzeko, `def, 'hitza erabiltzen da, eta, ondoren, funtzioaren izena, kasu honetan, `osasuna' eta "()" parametroen zerrenda, kasu honetan hutsik dagoena.
-Funtzioaren gorputzean, nahi ditugun jarraibideak jar ditzakegu.
+Ikus daitekeenez, funtzio bat definitzeko `def`, 'hitza erabiltzen da, eta, ondoren, funtzioaren izena, kasu honetan, `agurra` eta `()` parametroen zerrenda, kasu honetan hutsik dagoena. Funtzioaren barruan, nahi ditugun aginduak jar ditzakegu.
 
-Eta Pythonen estiloarekin jarraituz, funtzioaren barruan dagoen kodearen aurretik tabulazioa edo espazioak daudela ikusten du.
+Eta Pythonen estiloarekin jarraituz, funtzioaren barruan dagoen kodearen aurretik tabulazioa edo espazioak daudela ikusten da.
 
-Funtzio hori definitu ondoren, funtzio hori erabiltzen dugun bakoitzean, funtzio horretan dagoen kodea exekutatuko da:
+Funtzio hori definitu ondoren, funtzio hori erabiltzen (edo deitzen) dugun bakoitzean, funtzio horretan dagoen kodea exekutatuko da:
 
 ```python
 agurra()
@@ -24,9 +23,9 @@ Horrek erakutsiko du:
 Kaixo
 ```
 
-4.0 ariketa
+4.0 Ariketa
 
-Idatzi programa bat hiru emanaldirekin: egunak, arratsaldeak eta gauak. Bakoitzak agur desberdina egin behar du: "Egun on", "Arratsalde on" eta "Gabon", hurrenez hurren. Gehitu hiru funtzioetarako deiak.
+Idatzi programa bat hiru funtzioekin: `egunak`, `arratsaldeak` eta `gauak`. Bakoitzak agur desberdina egin behar du: `"Egun on"`, `"Arratsalde on"` eta `"Gabon"`, hurrenez hurren. Gehitu hiru funtzioetarako deiak.
 
 ```python
 def egunak ():
@@ -52,6 +51,7 @@ Gabon
 ```
 
 ## Parametroak
+
 Funtzioek parametroak jaso ditzakete. Horiek aldagai bihurtzen dira funtzioaren barruan, eta funtzioak gertatzen zaienaren arabera gauza desberdinak egitea ahalbidetzen digute.
 
 Adibidez, norbait agurtzen duen funtzio bat sor dezakegu:
@@ -65,8 +65,8 @@ Funtzioaren barruan, pertsonen balioa desberdina izango da deian ematen zaionare
 Honela erabil liteke:
 
 ```python
-agur("Neko") #pertsona izango da "Neko"
-agur("Ada") #pertsona izango da "Ada"
+agur("Neko") #pertsona aldagaia  "Neko" izango da
+agur("Ada") #pertsona aldagaia "Ada" izango da
 ```
 
 Hona hemen horren emaitza:
@@ -76,9 +76,9 @@ Kaixo Neko
 Kaixo Ada
 ```
 
-4.1 ariketa
+4.1 Ariketa
 
-Idatz ezazu programa bat "laukia" izeneko funtzio batekin, eta parametro hau izango du: Funtzioak emaitza biderkatu eta pantaila bakoitzean erakutsi behar du.
+Idatz ezazu programa bat `karratua` izeneko funtzio batekin, eta parametro hau izango du: funtzioak emaitza biderkatu eta pantaila bakoitzean erakutsi behar du.
 
 ```python
 def karratua(a):
@@ -98,8 +98,8 @@ Emaitza:
 Funtzio baten parametroek lehenetsitako balioa izan dezakete. Hau da, balio jakin bat esleitu ahal zaie, eta deian parametro hori pasatzen ez bada, parametroak balio hori lehenetsiko du.
 
 ```python
-def agur(pertsona, batzuetan = 3):
-  for i in range (batzuetan):
+def agur(pertsona, aldiz = 3):
+  for i in range (aldiz):
     print ("Kaixo", pertsona)
 ```
 
@@ -116,7 +116,7 @@ Kaixo Neko
 Kaixo Neko
 ```
 
-Aldiz, bigarren parametroa pasatzen ez badugu, `veces`ek lehenetsitako balioa hartuko du:
+Aldiz, bigarren parametroa pasatzen ez badugu, `aldiz`ek lehenetsitako balioa hartuko du:
 
 ```python
 agurtu("Bug")
@@ -132,11 +132,11 @@ Kaixo Bug
 
 ## Parametro infinituak
 
-Python-en funtzioei esker, parametro kopuru zehaztugabea pasatzen diezu. Arraro samarra dirudi, baina baliagarria da.
-Imajinatu funtzio bat sortu nahi duzula, pasatzen dizkiozun**** parametro guztiak batuko dituena.
+Python-en funtzioei esker, parametro kopuru zehaztugabea pasatzeko aukera daukazu. Arraro samarra dirudi, baina baliagarria da.
+Imajinatu funtzio bat sortu nahi duzula, pasatzen dizkiozun parametro guztiak batuko dituena.
 
 ```python
-def batu (* balioak):
+def batu (*balioak):
   emaitza = 0
 
   for balioa in balioak:
@@ -145,21 +145,21 @@ def batu (* balioak):
   return emaitza
 ```
 
-Erreparatzen badiguzu, `baloreak 'parametroa zehaztu dugu, aurretik zenbaki bat jarrita. Horrekin esan nahi dizugu ez dela parametro bakarra, edozein luzera izan dezakeen zerrenda baizik.
+Erreparatzen baduzu, `balioak` parametroa zehaztu dugu, aurretik `*` bat jarrita. Horrekin esan nahi dizugu ez dela parametro bakarra, edozein luzera izan dezakeen zerrenda baizik.
 
-Beraz, funtzio horri honela dei diezaiokegu:
+Beraz, funtzio horri honela deitu al diogu:
 
 ```python
 batu (3, 4, 5) # 12
 batu (2, 45) # 47
 ```
 
-4.2 ariketa
+4.2 Ariketa
 
-Idatz ezazu programa bat parametro mugagabeak edo dinamikoak jasotzen dituen batu izeneko funtzio batekin. Batzeko funtzioak parametroak hartu behar ditu, eta horiekin guztiekin testu bat itzuli, esaldi bat osatuz.
+Idatz ezazu programa bat parametro mugagabeak edo dinamikoak jasotzen dituen `hitzak_batu` izeneko funtzio batekin. Batzeko funtzioak parametroak hartu behar ditu, eta horiekin guztiekin testu bat itzuli, esaldi bat osatuz.
 
 ```python
-def batu(*hitza):
+def hitzak_batu(*hitza):
     esaldia = ""
 
     for h in hitza:
@@ -168,7 +168,7 @@ def batu(*hitza):
     return esaldia
 
 
-print(batu("kaixo", "nola", "naiz"))
+print(hitzak_batu("kaixo", "nola", "naiz"))
 ```
 
 Emaitza:
@@ -177,10 +177,10 @@ Emaitza:
 Kaixo, zer moduz?
 ```
 
-## Itzuli balioa
+## Balioak itzultzen: `return`
 
 Funtzioek beharrezkoak diren eragiketa guztiak egin ditzakete, baina emaitza bat itzultzen dutenean erabilgarriagoak dira.
-Horretarako, "itzuli" jarraibidea erabiltzen da, eta horrek datu jakin bat edo datu-egitura bat baino ezin du itzuli.
+Horretarako, `return` agindua erabiltzen da, eta horrek datu jakin bat edo datu egitura bat baino ezin du itzuli.
 
 Adibidez, bi balioren batura kalkulatzen duen funtzio bat:
 
@@ -203,14 +203,14 @@ Honela erabil liteke funtzioa:
 print(batura(40, 2)) # 42
 ```
 
-Gauza pare bat hartu behar dituzu kontuan, honako honekin:
+Gauza pare bat hartu behar dituzu kontuan:
 
-1- Behin `itzuli 'egiten denean, programa funtziotik ateratzen da.
-2- Funtzioan `itzuli 'bat baino gehiago izan dezakezu, baina horietako bat bakarrik exekutatuko da.
+1- Behin `return` egiten denean, programa funtziotik ateratzen da.
+2- Funtzioan `return` bat baino gehiago izan dezakezu, baina horietako bat bakarrik exekutatuko da.
 
-4.3 ariketa
+4.3 Ariketa
 
-Idatzi programa bat "zatitu" izeneko funtzio batekin, eta jaso itzazu parametro hauek: "berdin dio eta". Funtzioak bi zenbakien arteko zatiketa itzuli behar du.
+Idatzi programa bat `zatitu` izeneko funtzio batekin, eta jaso itzazu parametro hauek: `a` eta `b`. Funtzioak bi zenbakien arteko zatiketa itzuli behar du.
 
 ```python
 def zatitu (a, b):
@@ -228,7 +228,7 @@ Emaitza:
 Beste adibide bat, balio bat hainbat aldiz biderkatzen duen funtzio bat. Kopurua 1 baino txikiagoa bada, 0 bat itzuliko du:
 
 ```python
-def multiplika (kopurua, aldiz):
+def berredura (kopurua, aldiz):
   if (batzuetan > 0):
     guztira = 1
     for i in range (batzuetan):
@@ -237,25 +237,25 @@ def multiplika (kopurua, aldiz):
   else:
     return 0
 
-biderkadura (2, 3) # 8
+berredura (2, 3) # 8
 ```
 
 Oharra: aurreko funtzioa argiago geratzen da horrela.
 
 ```python
-def multiplika (kopurua, aldiz):
+def berredura (kopurua, aldiz):
   if (batzuetan < 1): return 0
 
   guztira = 1
   for i in range (batzuetan):
-    guztira = guztira* kopurua
+    guztira = guztira * kopurua
   return guztira # TODO CHECK
 ```
 
 ## Dei kabituak
 
 Ez izan funtzio-deiei habia egiteko beldurrik. Oso gauza naturala da programazioan.
-Imajinatu erabiltzaileari zenbaki bat eskatzeaz arduratzen den funtzio hau dugula eta sartutako zenbaki-ontzia itzultzen duela:
+Imajinatu erabiltzaileari zenbaki bat eskatzeaz arduratzen den funtzio hau dugula eta sartutako zenbaki itzultzen duela:
 
 ```python
 def irakur_zenbakia ():
@@ -278,13 +278,13 @@ print (kenketa(irakur_zenbakia(), irakur_zenbakia()))
 
 Zenbaki edo aldagai bat parametro gisa jarri beharrean, dei bat jar diezaiokegu funtzio bati.
 
-Funtzio horiek `irakurtzenZenbakia () ", balio batzuk itzuliko dituzte. Lehenengo "IrakurriZenbakia ()" deitu bezain laster, honela izango da:
+Funtzio horiek `irakur_zenbakia ()` , balio batzuk itzuliko dituzte. Lehenengo `irakur_zenbakia()` deitu bezain laster, honela izango da:
 
 ```python
 print (kenketa(5,irakur_zenbakia ()))
 ```
 
-Eta gero, bigarrenari "irakur_zenbakia ()" deitu ondoren:
+Eta gero, bigarrenari `irakur_zenbakia ()` deitu ondoren:
 
 ```python
 print (kenketa(5, 2))
@@ -296,25 +296,25 @@ Gero, kenketa egingo da eta balio bat itzuliko du:
 print(3)
 ```
 
-Eta, azkenik, a print deituko da eta emaitza ikusiko dugu:
+Eta, azkenik, `print` deituko da eta emaitza ikusiko dugu:
 
 ```console
 3
 ```
 
-4.4 ariketa
+4.4 Ariketa
 
 Idatzi bi funtzio. Zenbaki bat jaso eta zenbaki bera positiboan itzultzen duena.
 
-Emaitza positiboa (balioa)
+`positibo(balioa)`
 
 Eta bi zenbaki jaso eta horien arteko potentzia kalkulatzen duen beste funtzio bat.
 
-`potentzia (balorazioa 1, balorazioa 2)`
+`potentzia (balio1, balio2)`
 
 Bigarren funtzioari deitu behar diozu, parametro hauek kontuan hartuta:
 
-`potentzia (positiboa (-5), positiboa (4)`
+`berredura (positiboa (-5), positiboa (4))`
 
 Oharra: ez erabili aurretik zeuden funtzioak.
 
@@ -353,15 +353,15 @@ Hori ondo dago programak sinpleak direnean eta gauza gutxi egin behar dituztenea
 
 ### 0 arrazoia: zatitu eta irabaziko duzu
 
-Programak arazoak konpontzen saiatzen dira, konponbide bat eskainiz. Batzuetan arazoak oso konplexuak izan daitezke aurre egiteko. Funtzioek arazo horiei zatika heltzeko aukera ematen dizute. Funtzio bakoitzak arazoaren zati baterako konponbidea eman diezazuke. Beraz, arazoa arazo txiki askotan bana dezakezu eta arazo bakoitza funtzio batekin konpon dezakezu.
-Jarduneko kodea idaztea programa konplexuagoak diseinatzeko lehen urratsa da.
+Programak arazoak konpontzen saiatzen dira, soluzio bat eskainiz. Batzuetan arazoak oso konplexuak izan daitezke. Funtzioek arazo horiei zatika heltzeko aukera ematen dizute. Funtzio bakoitzak arazoaren zati baterako konponbidea eman diezazuke. Beraz, arazoa arazo txiki askotan bana dezakezu eta arazo bakoitza funtzio batekin konpon dezakezu.
+Programak funtzioetan banatzea programa konplexuagoak diseinatzeko lehen urratsa da.
 
 ###  1. arrazoia: kodea ez errepikatzea
 
 Zure programak zerbait egin behar badu hainbat aldiz, kodea behar beste aldiz errepikatu beharko zenuke. Imajinatu erabiltzailearen hainbat datu jaso behar dituzula, eta hori egiten duzun bakoitzean datua hutsik ez dagoela egiaztatu behar duzula:
 
 ```python
-dato = "
+dato = ""
 
 while dato  = "":
   dato = input ("Mesedez, sartu datu bat:")
@@ -372,7 +372,7 @@ while dato  = "":
 Erabiltzaileari 3 datu eskatzen badizkiozu, kode hori 3 aldiz errepikatu beharko zenuke! Aldiz, kode bera duen funtzio bat sortzen baduzu, behin bakarrik idatzi beharko duzu, eta gero behar adina aldiz erabili ahal izango duzu.
 
 Oharra: kodea ez errepikatzea da programatzaile on orok jarraitu beharreko araurik garrantzitsuenetako bat.
-3. araua ere aplika dezakezu. Zerbait errepikatu behar duzun hirugarren aldian, automatizatu egin behar duzu.
+**"3aren araua"** ere aplika dezakezu. Zerbait errepikatu behar duzun hirugarren aldian, automatizatu egin behar duzu.
 
 ###  2. arrazoia: berrerabili kodea
 
@@ -400,29 +400,30 @@ Holi
 Aupa
 ```
 
-###  3. arrazoia: mantentze-lanak erraztea
+###  3. arrazoia: mantentze lanak erraztea
 
 Kodea leku bakar batean badago, errazagoa da zuzentzea, aldatzea, hobetzea eta orokorrean mantentzea. Programa bat zerotik sortzea oso polita da, baina benetako lana kodea denboran zehar mantentzea da.
-Gure funtzioak ondo zehaztuak baditugu,* muuuuucho* lana aurreztuko dugu.
+Gure funtzioak ondo zehaztuak baditugu, lana PIIIIILA aurreztuko dugu.
 
 ### 4. arrazoia: testak egiteko aukera ematen du
 
 Agian gazte samarra zara honetarako, baina nik bezala gure programak probatzen ditugu. Zer esan nahi du horrek? Gure programek behar dutena egiten dutela egiaztatzea helburu bakarra duten programak idazten ditugula.
 Zure kodeak funtzioak baditu, testak idatzi ahal izango dituzu funtzio horiek behar dutena egiten dutela egiaztatzeko.
 
-Berez, aditua zarenean, zure eginkizuna bera baino lehen testa idaztea da zurea!
+Berez, aditua zarenean, zure eginkizuna bera baino lehen testa idaztea da zure betebeharra.
 
 ## Nola egin funtzio onak
 
-Edonork idatz ditzake funtzioak eta kodea zati txikitan taldekatu. Baina pro gisa funtzioak idatzi nahi badituzu, honako hau lortu behar duzu:
+Edonork idatz ditzake funtzioak eta kodea zati txikitan antolatu. Baina pro gisa funtzioak idatzi nahi badituzu, honako hau lortu behar duzu:
 
 - Funtzio batek gauza bakarra egin behar du. Hobe da funtzio txiki asko izatea, gauza asko egiten dituzten funtzio gutxi izatea baino. Zure funtzioa pantailan sartzen ez bada edo 24 lerro gainditzen baditu, agian zati txikitan banatu beharko duzu.
-- Funtzio batek ez luke kanpoan dagoen ezer aldatu behar. Ezustekorik izan nahi ez baduzu, funtzio batek ez luke programaren barruan bildu behar.
+- Funtzio batek ez luke kanpoan dagoen ezer aldatu behar. Ezustekorik izan nahi ez baduzu, funtzio batek ez luke programaren barruan ezustekorik behar.
 - Funtzio batek zerbait itzuli beharko luke, eta horrek beti berdina izan beharko luke parametro jakin batzuetarako.
 
 ## Proposatutako ariketak
 
-4.0 ariketa
+4.0 Ariketa
+
 Idatzi bi zenbaki jasotzen dituen funtzio bat, detektatu zein den handiena eta erakutsi horien arteko aldea.
 
 ```python
@@ -447,9 +448,9 @@ Aldea hau da: 5
 Aldea hau da: 8
 ```
 
-4.1 ariketa
+4.1 Ariketa
 
-Idatzi bi zenbaki eta eragiketa-zeinu aritmetiko bat jasotzen dituen programa bat: +, -,*, /. Funtzioak eragiketa horren emaitza itzuli behar du bi zenbakien artean.
+Idatzi bi zenbaki eta eragiketa zeinu aritmetiko bat jasotzen dituen programa bat: `+`, `-`,`*`, `/`. Funtzioak eragiketa horren emaitza itzuli behar du bi zenbakien artean.
 
 ```python
 def kalkulatu (balioa1, balioa2, eragiketa):
@@ -477,11 +478,11 @@ Emaitza:
 Eragiketa ezezaguna
 ```
 
-4.2 ariketa
+4.2 Ariketa
 
-`def saludo (momentoDelDia)`
+`def saludo (momentua)`
 
-Funtzio honek parametro gisa eguneko une bat hartzen du: "goiz", "arratsalde" edo "gau", eta dagokion agurra itzuli behar du: "Egun on", "Arratsalde on", eta "Gau on", hurrenez hurren.
+Funtzio honek parametro gisa eguneko une bat hartzen du: `"goizean"`, `"arratsaldean"` edo `"gauean"`, eta dagokion agurra itzuli behar du: `"Egun on"`, `"Arratsalde on"`, eta `"Gabon"`, hurrenez hurren.
 
 ```python
 def agurtu(momentua):
@@ -489,8 +490,8 @@ def agurtu(momentua):
         return "Egun on"
     elif momentua == "arratsaldean":
         return "Arratsalde on"
-    elif momentua == "gauero":
-        return "Gabon on"
+    elif momentua == "gauean":
+        return "Gabon"
     else:
         return ""
 
@@ -501,7 +502,7 @@ def agurtu2(momentua):
     return {
         "goizean": "Egun on",
         "arratsaldean": "Arratsalde on",
-        "gauero": "Gabon on"
+        "gauero": "Gabon"
     }[momentua]
 
 print(eskerrik_asko2("arratsaldean"))
@@ -514,9 +515,9 @@ Arratsalde on.
 Arratsalde on.
 ```
 
-4.3 ariketa
+4.3 Ariketa
 
-`hasiZenbakiarekin (zenbakiak, zenbakia)`
+`hasiZenbakiarekin (luzera, zenbakia)`
 
 Funtzio honek array zenbakien elementu guztiak parametro gisa pasatzen dugun zenbakiarekin hasi behar ditu.
 
@@ -540,11 +541,11 @@ Emaitza:
 [3, 3, 3, 3, 3, 3, 3, 3, 3, 3]
 ```
 
-4.4 ariketa
+4.4 Ariketa
 
-`def aleatorioa (gehienez)`
+`def ausazkoa (max)`
 
-Funtzio horrek 0 eta parametro gisa pasatzen den gehieneko balioaren arteko ausazko zenbaki bat itzuli behar du.
+Funtzio horrek 0 eta parametro gisa pasatzen den gehieneko balioaren arteko ausazko (random) zenbaki bat itzuli behar du.
 
 ```python
 import random
@@ -561,9 +562,9 @@ Emaitza:
 3
 ```
 
-4.5 ariketa
+4.5 Ariketa
 
-Izena (silabak)
+`izenaSortu(silabak)`
 
 Silaba kopuru bat dela eta, ausazko izen bat sortzen duen funtzio bat (kontsonanteak eta bokalak txandakatu). Aurreko ekitaldiko funtzioa erabil dezakezu.
 
@@ -594,11 +595,11 @@ Emaitza:
 xamozu
 ```
 
-4.6 ariketa
+4.6 Ariketa
 
-`def crearPassword (length)`
+`def pasahitzaSortu (luzera)`
 
-Luzera bat emanda, zorizko karaktereak dituen string bat sortzen duen funtzioa. Karakteredun* string* array bat erabil dezakezu, eta ausazko karaktereak atera arraytik, izen bat sortzeko. Ausazko zenbakiak sortzeko:
+Luzera bat emanda, zorizko karaktereak dituen string bat sortzen duen funtzioa. Karakteredun *string* array bat erabil dezakezu, eta ausazko karaktereak atera arraytik, izen bat sortzeko. Ausazko zenbakiak sortzeko `random.randint` funtzioa erabil dezakezu.
 
 ```python
 import random
@@ -628,15 +629,15 @@ Emaitza:
 _! 5_flg $
 ```
 
-4.7 ariketa
+4.7 Ariketa
 
-Sortu `faktura 'izeneko funtzioa (produktuak, kopuruak, prezioak), tamaina bereko hiru array jasotzen dituena, honako eduki hauekin:
+Sortu `faktura` izeneko funtzioa (produktuak, kantitateak, prezioak), tamaina bereko hiru array jasotzen dituena, honako eduki hauekin:
 
-1. `produktuak: produktuen izenak.
-2. `kantitatea: zenbaki osoak, kantitatea adierazita.
-3. `prezioa: zenbaki hamartarrak, produktu bakoitzaren prezioa adierazita.
+1. `produktuak`: produktuen izenak.
+2. `kantitateak`: zenbaki osoak, kantitatea adierazita.
+3. `prezioak`: zenbaki hamartarrak, produktu bakoitzaren prezioa adierazita.
 
-Funtzioak produktu bakoitza zeharkatu eta guztizko prezioa kalkulatu behar du, kantitatearen eta prezioaren arabera. Produktu bakoitzaren guztizko prezio hori erakutsi behar da, eta programaren amaieran, guztizko prezioa erakutsi behar da.
+Funtzioak produktu bakoitza aztertu eta guztizko prezioa kalkulatu behar du, kantitatearen eta prezioaren arabera. Produktu bakoitzaren guztizko prezio hori erakutsi behar da, eta programaren amaieran, batura osoaren prezioa erakutsi behar da.
 
 ```python
 def faktura(produktuak, kantitateak, prezioak):
@@ -656,9 +657,9 @@ def faktura(produktuak, kantitateak, prezioak):
     return faktura
 
 
-# Deituriko adibidea
-totalFaktura = faktura(["Ogi","Arrautza","Hirina"],[1,6,2],[1.2, 0.2, 0.8])
-print(totalFaktura)
+# Adibidea
+fakturaGuztira = faktura(["Ogi","Arrautza","Hirina"],[1,6,2],[1.2, 0.2, 0.8])
+print(fakturaGuztira)
 ```
 
 Emaitza:
@@ -678,9 +679,9 @@ Guztira: 4.0
 
 Hau zailagoa izango da. Jolasetako pertsonaiak sortzeko funtzio bat duen programa bat sortzen du.
 
-`def crearAtributos (mailaKonpentsazioa)`
+`def atributuakSortu (mailaKonpentsazioa)`
 
-Funtzio horrek hiru aldagai definitu behar ditu: indarra, abiadura eta adimena. Programak 20 puntu banatu behar ditu hiru aldagaien artean. Bestela esanda, hiru aldagaien artean 20 batu behar dira. `￮ mailaKonpentsazioa 'parametroak balio behar du puntu oso bereiziak edo berdinduak banatzen diren adierazteko, balio desorekatuena zenbat eta handiagoa izan, hau da, atributuen arteko aldea handiagoa da; nola egin programatzailearen kontua da.
+Funtzio horrek hiru aldagai definitu behar ditu: indarra, abiadura eta adimena. Programak 20 puntu banatu behar ditu hiru aldagaien artean. Bestela esanda, hiru aldagaien artean 20 batu behar dira. `mailaKonpentsazioa` parametroak balio behar du puntu oso bereiziak edo berdinduak banatzen diren adierazteko, balio desorekatuena zenbat eta handiagoa izan, hau da, atributuen arteko aldea handiagoa da; nola egin programatzailearen kontua da.
 
 Azkenean, programak esleitutako puntuen laburpena erakutsi behar du.
 
